1765 GET body => GET med parametere
Det er ikke klart definert hvordan det skulle fungert i HTTP-spesifikasjonen og dermed er det ikke støttet av swagger f.eks.
